--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.73.6",
     "react-native-device-info": "^10.13.1",
     "react-native-safe-area-context": "4.9.0",
-    "react-native-screens": "3.29.0"
+    "react-native-screens": "3.29.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
